tests/snapshots/examples_fixtures/type_system__failing__07_typed_let_float_into_int.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/07_typed_let_float_into_int.flx
== compile ==
failed (compile)
== diagnostics ==
error[E300]: Annotation Type Mismatch

The value of `answer` does not match its type annotation.

  examples/type_system/failing/07_typed_let_float_into_int.flx:1:19
  |
1 | let answer: Int = 42.5
  |                   ^^^^
  |                   ---- this value has type `Float`

  |             --- but `answer` was annotated as `Int`

Note:
  annotated type: Int
  value type: Float

Help:
  Try `to_int(...)` if truncating a `Float` to an `Int` is intended.


error[E413]: Top-Level Effect

Effectful operation is not allowed at top level (requires: IO).

  examples/type_system/failing/07_typed_let_float_into_int.flx:14:1
   |
14 | print("#{label}: #{add(answer, 8)}")
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ------------------------------------ top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


error[E414]: Missing Main Function

Effectful program is missing `fn main` root effect handler.

  examples/type_system/failing/07_typed_let_float_into_int.flx:14:1
   |
14 | print("#{label}: #{add(answer, 8)}")
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ------------------------------------ effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.


error[E400]: Missing Effect

requires effect `IO` but the enclosing context does not provide it

  examples/type_system/failing/07_typed_let_float_into_int.flx:14:1
   |
14 | print("#{label}: #{add(answer, 8)}")
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ------------------------------------ requires `IO`

Hint:
  annotate the enclosing function with `with IO`


error[E413]: Top-Level Effect

Effectful operation is not allowed at top level (requires: IO).

  examples/type_system/failing/07_typed_let_float_into_int.flx:15:1
   |
15 | print(distance_tag(point))
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
   | -------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


error[E400]: Missing Effect

requires effect `IO` but the enclosing context does not provide it

  examples/type_system/failing/07_typed_let_float_into_int.flx:15:1
   |
15 | print(distance_tag(point))
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
   | -------------------------- requires `IO`

Hint:
  annotate the enclosing function with `with IO`

Found 6 errors.
== stdout ==
<not executed>
